--- a/app/client/public/index.html
+++ b/app/client/public/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My MERN App</title>
-    <link href="./favicon.ico">
+    <title>Registration System | MERN based Zero Dependency System</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <meta name="Registration System | MERN based Zero Dependency System" content="A completely unopinionated MERN based user registration system, featuring sign-up, sign-in and remember password, built with zero-dependency.">
+    <meta name="description" content="A completely unopinionated MERN based user registration system, featuring sign-up, sign-in and remember password, built with zero-dependency.">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <meta property="og:title" content="Registration System | MERN based Zero Dependency System">
+    <meta property="og:description" content="A completely unopinionated MERN based user registration system, featuring sign-up, sign-in and remember password, built with zero-dependency.">
+    <meta property="og:url" content="https://shahzaibkhalid.github.io/registration-system/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://raw.githubusercontent.com/shahzaibkhalid/mern-app-generator/master/app/client/public/social-sharing-card.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@shahzaibkhalid">
+    <meta name="twitter:creator" content="@shahzaibkhalid" />
+    <meta name="twitter:title" content="Registration System | MERN based Zero Dependency System">
+    <meta name="twitter:description" content="A completely unopinionated MERN based user registration system, featuring sign-up, sign-in and remember password, built with zero-dependency.">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/shahzaibkhalid/mern-app-generator/master/app/client/public/social-sharing-card.png">
+    <meta name="twitter:url" content="https://shahzaibkhalid.github.io/registration-system/">
   </head>
   <body>
     <div id="root">
