--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta name="twitter:description" content="A completely unopinionated MERN based user registration system, featuring sign-up, sign-in and remember password, built with zero-dependency.">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/shahzaibkhalid/registration-system/master/app/client/public/social-sharing-card.png">
     <meta name="twitter:url" content="https://shahzaibkhalid.github.io/registration-system/">
+    <link rel="icon" href="./app/client/public/favicon.png">
     <style>
       body, html {
         width: 100%;
